--- a/code/code/css/style.css
+++ b/code/code/css/style.css
@@ -138,6 +138,9 @@ font-size: 18px;
    width: 40%;
     
 }
+.section_2_text h1{
+    font-size: 50px;
+}
 .section_2_img{
     padding-left: 114x;
     display: block;
@@ -149,11 +152,7 @@ font-size: 18px;
     text-decoration: none;
     list-style-type: none;
 }
-.section_2_text_backgroud img{
-    /* padding-left: 225px;
-    padding-top: 168px;
-    width: 40%; */
-}
+
 .section_2_img .img_section_2 {
     padding-top: 140px;
     padding-left: 60px;
