--- a/css/index.css
+++ b/css/index.css
@@ -56,50 +56,90 @@ header {
 
 /* navbar */
 
-.navbar a {
-  position: relative;
-  font-size: 1.4rem;
-  color: var(--text-color);
-  margin-right: 3.5rem;
+.navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 60px;
+  width: 988.5px;
+  height: 60px;
 }
 
-.navbar .login {
-  width: 78px;
-  height: 1588px;
+.navbar__menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 32px;
+  width: 551.5px;
+  height: 24px;
+  margin-right: -30px;
+}
+
+.navbar__menu a {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 10px;
+  width: 117px;
+  height: 24px;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;
+  color: var(--text-color);
+}
+
+.navbar__btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 0px;
+  gap: 24px;
+  width: 377px;
+  height: 60px;
+}
+
+.navbar__btn .login {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   padding: 16px 40px;
   gap: 10px;
-  transition-property: background;
-  transition-duration: 0.7s;
-  transition-delay: 0.1s;
-  background: var(--bg-login);
-  border-radius: 10px;
-  margin-right: 24px;
-}
-
-.navbar .login:hover {
-  background: rgb(173, 34, 228);
-}
-
-.navbar .whitespace {
-  width: 227px;
+  width: 126px;
   height: 60px;
+  background: var(--bg-login);
+  border-radius: 8px;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 23px;
+  letter-spacing: -0.02rem;
+  color: var(--bg-color);
+}
+
+.navbar__btn .whitespace {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   padding: 16px 24px;
   gap: 10px;
-  transition-property: background;
-  transition-delay: 0.1s;
-  transition-duration: 0.7s;
+  width: 227px;
+  height: 60px;
   background: var(--bg-whitespace);
-  border-radius: 10px;
-}
-
-.navbar .whitespace:hover {
-  background: rgb(173, 34, 228);
-}
-
-#down-icon {
-  width: 9px;
-  height: 4px;
-  padding-left: 20px;
+  border-radius: 8px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;
+  letter-spacing: -0.02rem;
+  color: var(--text-color);
 }
 
 /* section 1 */
@@ -1353,15 +1393,20 @@ header {
     gap: 32px;
   }
 
-  .navbar .login {
+  .navbar__menu {
+    width: 550px;
+    height: 23px;
+  }
+
+  .navbar__btn .login {
     padding: 16px 40px;
     gap: 10px;
     width: 126px;
     height: 60px;
   }
 
-  .navbar .whitespace {
-    padding: 16px 24px;
+  .navbar__btn .whitespace {
+    padding: 16px 0px;
     gap: 10px;
     width: 227px;
     height: 60px;
@@ -1560,24 +1605,78 @@ header {
     font-size: 55%;
   }
 
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 92px;
+    left: 0px;
+    top: 0px;
+    padding: 16px 32px;
+  }
+
+  .navbar__btn {
+    width: 439px;
+    margin-left: 200px;
+  }
+
   #menu-icon {
     display: block;
+    font-size: 60px;
+    margin-top: 0px;
   }
 
-  .navbar {
-    position: absolute;
-    width: 100%;
-    top: 100%;
-    left: 0;
-    padding: 1rem 3%;
-    background: var(--bg-color);
-    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  .navbar__menu {
+    display: none;
   }
 
-  .navbar a {
-    display: block;
-    font-size: 2rem;
-    margin: 3rem 0;
+  #home {
+    padding: 140px 32px;
+    width: 1152px;
+    height: 641px;
+    top: 92px;
+  }
+
+  .home__content h2 {
+    width: 500px;
+    height: 154px;
+  }
+
+  .home__content p {
+    width: 430px;
+    height: 60px;
+    margin-top: -20px;
+  }
+
+  .home__img img {
+    width: 600px;
+    height: 350px;
+    margin-left: 0px;
+  }
+
+  #about {
+    width: 1152px;
+    height: 1400.56px;
+    top: 733px;
+    padding: 140px 32px;
+  }
+
+  .about__text--block h1 {
+    width: 436px;
+    height: 200px;
+  }
+
+  .about__text--block p {
+    width: 404px;
+    height: 120px;
+  }
+
+  .about__content img {
+    width: 527px;
+    height: 328px;
+    left: 100.33px;
+    top: 27.96px;
+    margin-left: -170px;
   }
 }
